Build home page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;800&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
@@ -20,7 +20,9 @@
 
       <nav class="nav container">
         <ul class="nav__ul">
-          <li class="nav__li"><a class="nav__a" href="">HOME PAGE</a></li>
+          <li class="nav__li">
+            <a class="nav__a nav__current" href="">HOME PAGE</a>
+          </li>
           <li class="nav__li"><a class="nav__a" href="">SERVICES</a></li>
           <li class="nav__li"><a class="nav__a" href="">ABOUT US</a></li>
           <li class="nav__li"><a class="nav__a" href="">CONTACT</a></li>
@@ -38,50 +40,83 @@
             <h1 class="hero__title">
               transform any space into an oasis you can be proud of
             </h1>
-            <a href="" class="btn btn-primary">contact</a>
-            <a href="ask quote" class="btn btn-secondary">learn more</a>
+            <div class="hero__btns">
+              <a href="" class="btn btn-primary">contact</a>
+              <a href="ask quote" class="btn btn-secondary">learn more</a>
+            </div>
           </article>
         </div>
       </div>
+      <div class="container">
+        <article class="services">
+          <hgroup class="services_hrgroup">
+            <h2 class="services__title">Transform your home to zen garden!</h2>
+            <p class="services__subtitle">
+              These are the services we own to you
+            </p>
+          </hgroup>
 
-      <article class="services">
-        <hgroup>
-          <h2 class="services__title">Transform your home to zen garden!</h2>
-          <p class="services__subtitle">These are the services we own to you</p>
-        </hgroup>
+          <figure>
+            <img
+              src="imgs/1.png"
+              alt="young-handsome-cheerful-gardener-smiling-posing-with-crossed-arms-among-flowers"
+              class="services__img"
+            />
+            <figcaption class="services__caption">
+              Garden design and creation
+            </figcaption>
+          </figure>
 
-        <figure>
-          <img src="imgs/1.png" alt="" class="services__img" />
-          <figcaption class="services__caption">
-            Garden design and creation
-          </figcaption>
-        </figure>
+          <figure>
+            <img
+              src="imgs/2.png"
+              alt="young-attractive-bearded-hispanic-man-blue-t-shirt-gloves-working-garden-with-tools-cutting-leaves-watering-plants"
+              class="services__img"
+            />
+            <figcaption class="services__caption">
+              Maintenance and landscaping
+            </figcaption>
+          </figure>
 
-        <figure>
-          <img src="imgs/2.png" alt="" class="services__img" />
-          <figcaption class="services__caption">
-            Maintenance and landscaping
-          </figcaption>
-        </figure>
-
-        <figure>
-          <img src="imgs/3.webp" alt="" class="services__img" />
-          <figcaption class="services__caption">Decorative Plants</figcaption>
-        </figure>
-      </article>
+          <figure>
+            <img
+              src="imgs/3.webp"
+              alt="medium-shot-woman-smelling-flowers"
+              class="services__img"
+            />
+            <figcaption class="services__caption">Decorative Plants</figcaption>
+          </figure>
+        </article>
+      </div>
     </main>
 
     <footer class="footer">
-      <article>
-        <img src="imgs/logo-transparent.svg" alt="" />
-      </article>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-      </p>
-      <a href="" class="btn btn-secondary">contact us</a>
+      <div class="container">
+        <div class="footer__container">
+          <div class="footer__col footer__left">
+            <article class="footer__text_left_col">
+              <img
+                src="imgs/logo-transparent.svg"
+                alt="logo"
+                class="footer__logo"
+              />
+            </article>
+            <div class="footer__text_right_col">
+              <p class="footer__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
+                quis voluptatem laudantium hic consectetur? Veritatis ea illum
+                itaque est magni iusto dolores.
+              </p>
+              <a href="" class="btn btn-secondary">contact us</a>
+            </div>
+          </div>
+          <div class="footer__col footer__right">
+            <small class="footer__copyright"> &copy;Lucky Shrub 2023.</small>
+          </div>
+        </div>
 
-      <small> &copy;Lucky Shrub 2023. </small>
-      <small>Designed and built by Diogo Stein</small>
+        <p class="footer__credits">Designed and built by Diogo Stein</p>
+      </div>
     </footer>
   </body>
 </html>
