--- a/index.html
+++ b/index.html
@@ -15,19 +15,54 @@
   </head>
 
   <body>
-    <header class="header container">
-      <img src="imgs/logo-green.svg" alt="logo" class="header__logo" />
+    <header class="header">
+      <div class="container">
+        <div class="header__logo_container">
+          <img src="imgs/logo-green.svg" alt="logo" class="header__logo" />
+          <a href="" class="header__hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+          </a>
+        </div>
 
-      <nav class="nav container">
-        <ul class="nav__ul">
-          <li class="nav__li">
-            <a class="nav__a nav__current" href="">HOME PAGE</a>
-          </li>
-          <li class="nav__li"><a class="nav__a" href="">SERVICES</a></li>
-          <li class="nav__li"><a class="nav__a" href="">ABOUT US</a></li>
-          <li class="nav__li"><a class="nav__a" href="">CONTACT</a></li>
-        </ul>
-      </nav>
+        <nav class="nav-desktop">
+          <ul class="nav-desktop__ul">
+            <li class="nav-desktop__li">
+              <a class="nav-desktop__a nav-desktop__current" href=""
+                >HOME PAGE</a
+              >
+            </li>
+            <li class="nav-desktop__li">
+              <a class="nav-desktop__a" href="">SERVICES</a>
+            </li>
+            <li class="nav-desktop__li">
+              <a class="nav-desktop__a" href="">ABOUT US</a>
+            </li>
+            <li class="nav-desktop__li">
+              <a class="nav-desktop__a" href="">CONTACT</a>
+            </li>
+          </ul>
+        </nav>
+
+        <nav class="nav-mobile">
+          <a href="" class="nav-mobile__closeBtn">&times</a>
+          <ul class="nav-mobile__ul">
+            <li class="nav-mobile__li">
+              <a class="nav-mobile__a nav-mobile__current" href="">HOME PAGE</a>
+            </li>
+            <li class="nav-mobile__li">
+              <a class="nav-mobile__a" href="">SERVICES</a>
+            </li>
+            <li class="nav-mobile__li">
+              <a class="nav-mobile__a" href="">ABOUT US</a>
+            </li>
+            <li class="nav-mobile__li">
+              <a class="nav-mobile__a" href="">CONTACT</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <main>
@@ -118,5 +153,6 @@
         <p class="footer__credits">Designed and built by Diogo Stein</p>
       </div>
     </footer>
+    <script src="js/main.js"></script>
   </body>
 </html>
