--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="container">
         <div class="header__logo_container">
           <img src="imgs/logo-green.svg" alt="logo" class="header__logo" />
-          <a href="" class="header__hamburger">
+          <a href="#" class="header__hamburger">
             <span></span>
             <span></span>
             <span></span>
@@ -29,18 +29,18 @@
         <nav class="nav-desktop">
           <ul class="nav-desktop__ul">
             <li class="nav-desktop__li">
-              <a class="nav-desktop__a nav-desktop__current" href=""
+              <a class="nav-desktop__a nav-desktop__current" href="index.html"
                 >HOME PAGE</a
               >
             </li>
             <li class="nav-desktop__li">
-              <a class="nav-desktop__a" href="">SERVICES</a>
+              <a class="nav-desktop__a" href="services.html">SERVICES</a>
             </li>
             <li class="nav-desktop__li">
-              <a class="nav-desktop__a" href="">ABOUT US</a>
+              <a class="nav-desktop__a" href="about.html">ABOUT US</a>
             </li>
             <li class="nav-desktop__li">
-              <a class="nav-desktop__a" href="">CONTACT</a>
+              <a class="nav-desktop__a" href="contact.html">CONTACT</a>
             </li>
           </ul>
         </nav>
@@ -49,16 +49,18 @@
           <a href="" class="nav-mobile__closeBtn">&times</a>
           <ul class="nav-mobile__ul">
             <li class="nav-mobile__li">
-              <a class="nav-mobile__a nav-mobile__current" href="">HOME PAGE</a>
+              <a class="nav-mobile__a nav-mobile__current" href="index.html"
+                >HOME PAGE</a
+              >
             </li>
             <li class="nav-mobile__li">
-              <a class="nav-mobile__a" href="">SERVICES</a>
+              <a class="nav-mobile__a" href="services.html">SERVICES</a>
             </li>
             <li class="nav-mobile__li">
-              <a class="nav-mobile__a" href="">ABOUT US</a>
+              <a class="nav-mobile__a" href="about.html">ABOUT US</a>
             </li>
             <li class="nav-mobile__li">
-              <a class="nav-mobile__a" href="">CONTACT</a>
+              <a class="nav-mobile__a" href="contact.html">CONTACT</a>
             </li>
           </ul>
         </nav>
@@ -76,8 +78,8 @@
               transform any space into an oasis you can be proud of
             </h1>
             <div class="hero__btns">
-              <a href="" class="btn btn-primary">contact</a>
-              <a href="ask quote" class="btn btn-secondary">learn more</a>
+              <a href="contact.html" class="btn btn-primary">contact</a>
+              <a href="services.html" class="btn btn-secondary">learn more</a>
             </div>
           </article>
         </div>
@@ -150,7 +152,12 @@
           </div>
         </div>
 
-        <p class="footer__credits">Designed and built by Diogo Stein</p>
+        <p class="footer__credits">
+          Designed and built by
+          <a class="footer__link" href="https://github.com/thediogostein"
+            >Diogo Stein</a
+          >
+        </p>
       </div>
     </footer>
     <script src="js/main.js"></script>
